--- a/forum/src/index.html
+++ b/forum/src/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title></title>
+      <title>Basis Independent Fremont Forum</title>
     </head>
     <body>
+      <!- buttons, user interface, etc. -->
     </body>
   </html>
